@@ -1,3 +1,8 @@
+2005-02-01  Mark McLoughlin  <mark@skynet.ie>
+
+	* lib/protosession.py: open the dummy X connection
+	on the right display.
+
 2005-01-31  Mark McLoughlin  <mark@skynet.ie>
 
 	* lib/protosession.py: open and hold open an X
